Bug 91284 - xf86-video-nouveau fails to build with latest xorg
Summary: xf86-video-nouveau fails to build with latest xorg
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/nouveau (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Nouveau Project
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-09 15:30 UTC by Vadim Rutkovsky
Modified: 2015-07-11 21:00 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
adapt to new dirty tracking api (586 bytes, patch)
2015-07-09 15:38 UTC, Ilia Mirkin
no flags Details | Splinter Review
Adapt to a new dirty tracking API (v2) (1.51 KB, text/plain)
2015-07-09 21:30 UTC, Vadim Rutkovsky
no flags Details

Description Vadim Rutkovsky 2015-07-09 15:30:06 UTC
../../src/nv_driver.c: In function 'redisplay_dirty':
../../src/nv_driver.c:560:2: error: too many arguments to function 'PixmapSyncDirtyHelper'
  PixmapSyncDirtyHelper(dirty, &pixregion);
  ^
In file included from /usr/include/xorg/gc.h:54:0,
                 from /usr/include/xorg/dix.h:51,
                 from /usr/include/xorg/privates.h:151,
                 from /usr/include/xorg/cursor.h:53,
                 from /usr/include/xorg/scrnintstr.h:53,
                 from /usr/include/xorg/xf86str.h:39,
                 from /usr/include/xorg/xf86.h:44,
                 from ../../src/nv_include.h:15,
                 from ../../src/nv_driver.c:26:
/usr/include/xorg/pixmap.h:131:1: note: declared here
 PixmapSyncDirtyHelper(PixmapDirtyUpdatePtr dirty);
 ^
Makefile:619: recipe for target 'nv_driver.lo' failed


See https://bugs.freedesktop.org/show_bug.cgi?id=91276 for similar break in radeon driver
Comment 1 Ilia Mirkin 2015-07-09 15:38:19 UTC
Created attachment 117016 [details] [review]
adapt to new dirty tracking api

Please give the attached patch a shot.
Comment 2 Vadim Rutkovsky 2015-07-09 21:30:14 UTC
Created attachment 117020 [details]
Adapt to a new dirty tracking API (v2)

Thanks, this worked, fixed drmmode_set_scanout_pixmap too
Comment 3 Ilia Mirkin 2015-07-11 21:00:04 UTC
Pushed as

commit fdc528306e4018b314f2efcb2be4e37672bddd75
Author: Vadim Rutkovsky <vrutkovs@redhat.com>
Date:   Thu Jul 9 23:23:37 2015 +0200

    Adapt to new dirty tracking api
    
    Mirrors commit b6d871bf2 (radeon: adopt for new X server dirty tracking
    APIs.) in xf86-video-ati.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=91284


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.