Adapt to new dirty tracking api

Mirrors commit b6d871bf2 (radeon: adopt for new X server dirty tracking
APIs.) in xf86-video-ati.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=91284